--- a/index.html
+++ b/index.html
@@ -7,89 +7,122 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <link rel="icon" href="logoDeltha.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <title>Deltha Car´s</title>
+</head>
+
 
 <body bgcolor="lightgrey">
-  <title>Deltha Car´s</title>
-  </head>
 
-  <header id="mainheader">
-    <nav id="mainnavbar">
-      <div class="container">
+  <!-- Barra de navegación -->
+  <section>
+    <header>
+      <nav class="row navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <div class="container-icon" style="margin-left: 20px;">
+            <a class="navbar-brand" href="#">
+              <img src="/img/logoDeltha.ico" alt="Bootstrap" width="70" height="70"> <span class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
+            </a>
+          </div>
+          <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
+                class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                <path fill-rule="evenodd"
+                  d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </span>
+          </button>
+          <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-link text-white" href="#">Inicio</a>
+              <a class="nav-link text-white" href="views/stock.html">Stock DELTHA CAR´S</a>
+              <a class="nav-link text-white" href="views/services.html">Financiación</a>
+              <a class="nav-link text-white" href="views/about.html">Contacto</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+  </section>
+  
 
-        <h1 class="logo"><a href="index.html">DELTHA<span>CAR´S</span></a></h1>
+
+  <!-- Seccion Hero -->
+
+  <section class="hero align-items-stretch">
+    <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
+      <h1>ENCUENTRA TU COCHE</h1>
+      <h2>Deltacars somos una empresa dedicada a la compra-venta de vehículos de ocasión con 15 años de experiencia en el sector.</h2>
+    </div>
+    <div class="hero-inferior">
+      <img class="hero-inferior-imagen img-fluid" src="imagenes/hero-inferior.svg" alt="Monitor, laptop y logos de HTML, CSS, JavaScript y React.">
+    </div>
+  </section>
+
+
+  <div class="container">
+
+
+    <h3> MISIÓN <h3>
+        <p> Deltha Car´s se caracteriza por brindar un buen servicio y atención
+          al cliente, buscando las mejores soluciones y asesorías, ofreciendo los mejores repuestos para su vehículo
+          de óptima calidad y excelente respaldo.
+
+        </p>
         <br>
         <br>
 
-        <nav>
-          <ul>
-            <li><a class="current" href="index.html">INICIO</a></li>
-            <li><a href="about.html">STOCK DELTHA CAR´S </a></li>
-            <li><a href="services.html">FINANCIACIÓN </a></li>
-            <li><a href="contact.html">CONTACTO </a></li>
-          </ul>
-      </div>
-    </nav>
-    <marquee bgcolor="#CACFD2" behavior="alternate" direction="right">
+        <body>
+          <img src="mision.jpeg">
+        </body>
+        </br>
+        <br>
+        <br>
+        <h3> VISIÓN <h3>
+            <p> Identificarnos por el excelente servicio al consumidor y convirtiéndonos en líderes del Valle de Tenza
+              y alrededores en comercialización de partes y accesorios automotrices brindando cómodos precios sin
+              bajar la calidad de los repuestos y el servicio; y estar a la vanguardia en cada asesoría suministrada
 
-      <font color="#17202A" size="4"> DELTHA CAR´S TU MEJOR ALIADA EN EL CAMINO
-    </marquee>
-    <br>
-    <br>
-    <br>
-    <div class="container">
+            </p>
+            <br>
+            <br>
+            <hr style="border: black 6px solid;">
+            <br>
+            <h3> VEHICULOS DE OCASIÓN <h3>
 
+                <p>
+                  Disponemos de vehículos en stock. Si no tenemos el vehículo que quieres, te traemos lo que buscas al
+                  detalle, con todas las garantías. También gestionamos la compra de vehículos de importación.
+                </p>
+                <br>
+                <center>
+                  <img src="ocasion.jpeg">
+                </center>
 
-      <h3> MISIÓN <h3>
-          <p> Deltha Car´s se caracteriza por brindar un buen servicio y atención
-            al cliente, buscando las mejores soluciones y asesorías, ofreciendo los mejores repuestos para su vehículo
-            de óptima calidad y excelente respaldo.
+                <br>
 
-          </p>
-          <br>
-          <br>
-
-          <body>
-            <img src="mision.jpeg">
-          </body>
-          </br>
-          <br>
-          <br>
-          <h3> VISIÓN <h3>
-              <p> Identificarnos por el excelente servicio al consumidor y convirtiéndonos en líderes del Valle de Tenza
-                y alrededores en comercialización de partes y accesorios automotrices brindando cómodos precios sin
-                bajar la calidad de los repuestos y el servicio; y estar a la vanguardia en cada asesoría suministrada
-
-              </p>
-              <br>
-              <br>
-              <hr style="border: black 6px solid;">
-              <br>
-              <h3> VEHICULOS DE OCASIÓN <h3>
-
-                  <p>
-                    Disponemos de vehículos en stock. Si no tenemos el vehículo que quieres, te traemos lo que buscas al
-                    detalle, con todas las garantías. También gestionamos la compra de vehículos de importación.
-                  </p>
-                  <br>
-                  <center>
-                    <img src="ocasion.jpeg">
-                  </center>
-
-                  <br>
-
-                  <hr style="border: black 6px solid;">
-                  <br>
-                  <h3> COMPRAMOS TU COCHE </h3>
+                <hr style="border: black 6px solid;">
+                <br>
+                <h3> COMPRAMOS TU COCHE </h3>
 
 
 
-                  <hr style="border: black 6px solid;">
-                  <a href="services.html" class="btn btn-light">Stock Deltha Car´s</a>
+                <hr style="border: black 6px solid;">
+                <a href="services.html" class="btn btn-light">Stock Deltha Car´s</a>
 
-    </div>
-    </div>
-    </div>
-  </header>
+  </div>
+  </div>
+  </div>
+
 
 </body>
 
