reparar rutas de imagenes y modificar categorias de los objetos js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container-fluid">
           <div class="container-icon" style="margin-left: 20px;">
             <a class="navbar-brand" href="#">
-              <img src="/img/logoDeltha.ico" alt="Bootstrap" width="70" height="70"> <span class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
+              <img src="img/logoD.png" width="70" height="70"> <span class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
             </a>
           </div>
           <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
@@ -119,8 +119,6 @@
                 <hr style="border: black 6px solid;">
                 <a href="services.html" class="btn btn-light">Stock Deltha Car´s</a>
 
-  </div>
-  </div>
   </div>
 
 
