avanzar en el contenido del index y funcionalidad del js

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <link rel="icon" href="logoDeltha.ico">
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+  <!-- Link CSS JS -->
   <title>Deltha Car´s</title>
 </head>
 
@@ -25,7 +27,8 @@
         <div class="container-fluid">
           <div class="container-icon" style="margin-left: 20px;">
             <a class="navbar-brand" href="#">
-              <img src="img/logoD.png" width="70" height="70"> <span class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
+              <img src="img/logoD.png" width="70" height="70"> <span class="text-white">DELTHA<span
+                  class="text-danger">CAR´S</span></span>
             </a>
           </div>
           <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
@@ -41,7 +44,8 @@
               </svg>
             </span>
           </button>
-          <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;" id="navbarNavAltMarkup">
+          <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;"
+            id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
               <a class="nav-link text-white" href="#">Inicio</a>
               <a class="nav-link text-white" href="views/stock.html">Stock DELTHA CAR´S</a>
@@ -53,25 +57,102 @@
       </nav>
     </header>
   </section>
-  
+
 
 
   <!-- Seccion Hero -->
+  <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular">
+    <div class="et_pb_row et_pb_row_0">
+      <div class="et_pb_column et_pb_column_2_3 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough">
+        <div class="et_pb_module et_pb_text et_pb_text_0 et_pb_text_align_left et_pb_bg_layout_dark et_had_animation"
+          style="">
+          <div class="et_pb_text_inner">
+            <h1 style="text-align: center;">Encuentra tu coche</h1>
+          </div>
+        </div>
+        <div class="et_pb_module et_pb_text et_pb_text_1 et_pb_text_align_left et_pb_bg_layout_dark et_had_animation"
+          style="">
+          <div class="et_pb_text_inner">
+            <h3 class="title-box_secondary" style="text-align: center;">Deltacars somos una empresa dedicada a la
+              compra-venta de vehículos de ocasión con 15 años de experiencia en el sector.</h3>
+            <h3 class="title-box_secondary" style="text-align: center;"></h3>
+          </div>
+        </div>
+        <div class="et_pb_module et_pb_cta_0 et_pb_promo  et_pb_text_align_center et_pb_bg_layout_dark">
+          <div class="et_pb_promo_description">
+            <div>
+              <h4><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA QUE LIMPIAMOS TODOS
+                    NUESTROS COCHES, PARA LA SEGURIDAD E HIGIENE DE NUESTROS CLIENTES.</span></strong></h4>
+            </div>
+          </div>
 
-  <section class="hero align-items-stretch">
-    <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <h1>ENCUENTRA TU COCHE</h1>
-      <h2>Deltacars somos una empresa dedicada a la compra-venta de vehículos de ocasión con 15 años de experiencia en el sector.</h2>
+        </div>
+      </div>
+      <div
+        class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child et_pb_column_empty">
+      </div>
     </div>
-    <div class="hero-inferior">
-      <img class="hero-inferior-imagen img-fluid" src="imagenes/hero-inferior.svg" alt="Monitor, laptop y logos de HTML, CSS, JavaScript y React.">
-    </div>
-  </section>
+    <div class="et_pb_row et_pb_row_1">
+      <div class="et_pb_column et_pb_column_4_4 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
+        <div
+          class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_center et_pb_module et_had_animation"
+          style="">
+          <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="https://deltacars.es/deltacars-stock/"
+            target="_blank" data-icon="$">Ver Stock</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Seccion vehiculos de ocasion -->
+  <div class="et_pb_section et_pb_section_1 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
+    <div class="et_pb_row et_pb_row_2 et_pb_row_fullwidth">
+      <div class="et_pb_column et_pb_column_1_2 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+        <div
+          class="et_pb_module et_pb_blurb et_pb_blurb_0  et_pb_text_align_center  et_pb_blurb_position_top et_pb_bg_layout_dark">
+          <div class="et_pb_blurb_content">
+            <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap"><span
+                  class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone et-pb-icon et-animated">J</span></span>
+            </div>
+            <div class="et_pb_blurb_container">
+              <h4 class="et_pb_module_header"><span>vehículos de ocasión</span></h4>
+              <div class="et_pb_blurb_description">
+                <p>Disponemos de vehículos en stock. Si no tenemos el vehículo que quieres, te traemos lo que buscas al
+                  detalle, con todas las garantías. También gestionamos la compra de vehículos de importación.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="et_pb_column et_pb_column_1_2 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough et-last-child">
+        <div
+          class="et_pb_module et_pb_blurb et_pb_blurb_1  et_pb_text_align_center  et_pb_blurb_position_top et_pb_bg_layout_dark">
+          <div class="et_pb_blurb_content">
+            <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap"><span
+                  class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone et-pb-icon et-animated"></span></span>
+            </div>
+            <div class="et_pb_blurb_container">
+              <h4 class="et_pb_module_header"><span>compramos tu coche</span></h4>
+              <div class="et_pb_blurb_description">
+                <p><span>Tasamos tu coche y te hacemos una oferta. Transferimos el dinero directamente y nos hacemos
+                    cargo del cambio de titularidad.&nbsp;No dudes en consultarnos, nos adaptamos a tus
+                    necesidades.</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </div>
+
+    <div class="et_pb_bottom_inside_divider" style=""></div>
+  </div>
 
   <div class="container">
-
-
     <h3> MISIÓN <h3>
         <p> Deltha Car´s se caracteriza por brindar un buen servicio y atención
           al cliente, buscando las mejores soluciones y asesorías, ofreciendo los mejores repuestos para su vehículo
@@ -82,7 +163,7 @@
         <br>
 
         <body>
-          <img src="mision.jpeg">
+          <img src="img/mision.jpeg">
         </body>
         </br>
         <br>
@@ -105,7 +186,7 @@
                 </p>
                 <br>
                 <center>
-                  <img src="ocasion.jpeg">
+                  <img src="img/ocasion.jpeg">
                 </center>
 
                 <br>
