agregar marquee y color de fonto a todas las vistas

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <!-- Link CSS JS -->
+  <link rel="stylesheet" href="css/index.css">
   <title>Deltha Car´s</title>
 </head>
 
@@ -57,6 +58,10 @@
       </nav>
     </header>
   </section>
+
+  <marquee bgcolor="#716F6F" behavior="alternate" direction="right">
+      <font color="#FFFFCC" size="4">DELTHA CAR´S TU MEJOR ALIADA EN EL CAMINO
+  </marquee>
 
 
 
@@ -106,7 +111,8 @@
   </div>
 
   <!-- Seccion vehiculos de ocasion -->
-  <div class="et_pb_section et_pb_section_1 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
+  <div
+    class="et_pb_section et_pb_section_1 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
     <div class="et_pb_row et_pb_row_2 et_pb_row_fullwidth">
       <div class="et_pb_column et_pb_column_1_2 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
         <div
