--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <!-- Link CSS JS -->
   <link rel="stylesheet" href="css/index.css">
   <title>Deltha Car´s</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
 </head>
 
 
@@ -24,7 +29,7 @@
   <!-- Barra de navegación -->
   <section>
     <header>
-      <nav class="row navbar navbar-expand-lg bg-dark">
+      <nav class="row navbar navbar-expand-lg bg-dark fixed-top">
         <div class="container-fluid">
           <div class="container-icon" style="margin-left: 20px;">
             <a class="navbar-brand" href="#">
@@ -32,7 +37,7 @@
                   class="text-danger">CAR´S</span></span>
             </a>
           </div>
-          <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
+          <button class="navbar-toggler" style="margin-right: 10px; border-color: white;" type="button"
             data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
@@ -48,7 +53,7 @@
           <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;"
             id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-              <a class="nav-link text-white" href="#">Inicio</a>
+              <a class="nav-link text-danger" href="#">Inicio</a>
               <a class="nav-link text-white" href="views/stock.html">Stock DELTHA CAR´S</a>
               <a class="nav-link text-white" href="views/services.html">Financiación</a>
               <a class="nav-link text-white" href="views/about.html">Contacto</a>
@@ -59,56 +64,33 @@
     </header>
   </section>
 
-  <marquee bgcolor="#716F6F" behavior="alternate" direction="right">
-      <font color="#FFFFCC" size="4">DELTHA CAR´S TU MEJOR ALIADA EN EL CAMINO
-  </marquee>
+
+  <!--   <marquee bgcolor="#716F6F" behavior="alternate" direction="right">
+    <font color="#FFFFCC" size="4">DELTHA CAR´S TU MEJOR ALIADA EN EL CAMINO
+  </marquee> -->
 
 
 
   <!-- Seccion Hero -->
-  <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular">
-    <div class="et_pb_row et_pb_row_0">
-      <div class="et_pb_column et_pb_column_2_3 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough">
-        <div class="et_pb_module et_pb_text et_pb_text_0 et_pb_text_align_left et_pb_bg_layout_dark et_had_animation"
-          style="">
-          <div class="et_pb_text_inner">
-            <h1 style="text-align: center;">Encuentra tu coche</h1>
+  <section class="seccion-hero text-center">
+    <div class="fixed-background">
+      <div>
+        <h1 class="title text-white">Encuentra tu coche</h1>
+        <div class="container d-flex justify-content-center align-items-center">
+          <div class="descripcion-div">
+            <h3 class="text-gray descripcion-delta">Deltacars somos una empresa dedicada a la compra-venta de vehículos de ocasión con 15 años de experiencia en el sector.</h3>
+            <h3 class="title-box_secondary"></h3>
           </div>
         </div>
-        <div class="et_pb_module et_pb_text et_pb_text_1 et_pb_text_align_left et_pb_bg_layout_dark et_had_animation"
-          style="">
-          <div class="et_pb_text_inner">
-            <h3 class="title-box_secondary" style="text-align: center;">Deltacars somos una empresa dedicada a la
-              compra-venta de vehículos de ocasión con 15 años de experiencia en el sector.</h3>
-            <h3 class="title-box_secondary" style="text-align: center;"></h3>
+        <div class="services-section">
+          <div class="services container">
+            <h4 class="service-description"><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA QUE LIMPIAMOS TODOS NUESTROS COCHES, PARA LA SEGURIDAD E HIGIENE DE NUESTROS CLIENTES.</span></strong></h4>
           </div>
-        </div>
-        <div class="et_pb_module et_pb_cta_0 et_pb_promo  et_pb_text_align_center et_pb_bg_layout_dark">
-          <div class="et_pb_promo_description">
-            <div>
-              <h4><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA QUE LIMPIAMOS TODOS
-                    NUESTROS COCHES, PARA LA SEGURIDAD E HIGIENE DE NUESTROS CLIENTES.</span></strong></h4>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div
-        class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child et_pb_column_empty">
-      </div>
-    </div>
-    <div class="et_pb_row et_pb_row_1">
-      <div class="et_pb_column et_pb_column_4_4 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough et-last-child">
-
-        <div
-          class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_center et_pb_module et_had_animation"
-          style="">
-          <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_dark" href="https://deltacars.es/deltacars-stock/"
-            target="_blank" data-icon="$">Ver Stock</a>
         </div>
       </div>
     </div>
-  </div>
+  </section>
+  
 
   <!-- Seccion vehiculos de ocasion -->
   <div
