--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     </header>
   </section>
 
-
   <!-- Seccion Hero -->
   <section class="seccion-hero text-center">
     <div class="fixed-background">
@@ -78,8 +77,7 @@
             </h4>
           </div>
         </div>
-        <div class="container container-fluid d-flex justify-content-center align-items-center">
-          <div class="descripcion-div">
+        <div class=" container-fluid descripcion-div">
             <h3 class="text-gray fs-5 mt-5  descripcion-delta">Deltacars somos una empresa dedicada a la compra-venta de
               vehículos
               de ocasión con 15 años de experiencia en el sector.</h3>
@@ -148,7 +146,8 @@
   </div>
 
   <!-- Seccion ofertas de la empresa 2 -->
-  <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
+  <div
+    class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
     <div class="et_pb_row et_pb_row_3">
       <div class="et_pb_column et_pb_column_4_4 et_pb_column_5 et_pb_css_mix_blend_mode_passthrough et-last-child">
         <div class="et_pb_module et_pb_text et_pb_text_2 et_pb_text_align_center et_pb_bg_layout_light">
@@ -157,8 +156,10 @@
     </div>
     <div class="mb-5">
       <div class="et_pb_row">
-        <div class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_6 et_pb_css_mix_blend_mode_passthrough">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_2 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_6 et_pb_css_mix_blend_mode_passthrough">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_2 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>Vehículos ocasión</span></h4>
@@ -169,8 +170,10 @@
             </div>
           </div>
         </div>
-        <div class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_7 et_pb_css_mix_blend_mode_passthrough">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_3 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_7 et_pb_css_mix_blend_mode_passthrough">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_3 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>% Financiación</span></h4>
@@ -181,8 +184,10 @@
             </div>
           </div>
         </div>
-        <div class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_8 et_pb_css_mix_blend_mode_passthrough et-last-child">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_4 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 -col-sm-3 col-md-4 et_pb_column_8 et_pb_css_mix_blend_mode_passthrough et-last-child">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_4 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>Compramos tu coche</span></h4>
@@ -194,10 +199,12 @@
           </div>
         </div>
       </div>
-  
+
       <div class="et_pb_row mt-5">
-        <div class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_9 et_pb_css_mix_blend_mode_passthrough">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_5 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_9 et_pb_css_mix_blend_mode_passthrough">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_5 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>Pruébalo</span></h4>
@@ -208,20 +215,25 @@
             </div>
           </div>
         </div>
-        <div class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_10 et_pb_css_mix_blend_mode_passthrough">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_6 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_10 et_pb_css_mix_blend_mode_passthrough">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_6 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>Documentación</span></h4>
                 <div class="et_pb_blurb_description">
-                  <p>Gestionamos cualquier trámite relacionado con tu vehículo, cambio de titularidad, reservas de dominio, etc..</p>
+                  <p>Gestionamos cualquier trámite relacionado con tu vehículo, cambio de titularidad, reservas de
+                    dominio, etc..</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_11 et_pb_css_mix_blend_mode_passthrough et-last-child">
-          <div class="et_pb_module et_pb_blurb et_pb_blurb_7 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
+        <div
+          class="et_pb_column et_pb_column_1_3 col-12 col-sm-3 col-md-4 et_pb_column_11 et_pb_css_mix_blend_mode_passthrough et-last-child">
+          <div
+            class="et_pb_module et_pb_blurb et_pb_blurb_7 et_pb_text_align_center et_pb_blurb_position_top et_pb_bg_layout_light">
             <div class="et_pb_blurb_content">
               <div class="et_pb_blurb_container">
                 <h4 class="et_pb_module_header"><span>Atención personalizada</span></h4>
@@ -236,7 +248,7 @@
     </div>
     <div class="et_pb_bottom_inside_divider" style=""></div>
   </div>
-  
+
 
   <!-- Nuevo Stock -->
   <div class="d-flex justify-content-center align-items-center mt-5 mb-5">
@@ -362,7 +374,31 @@
     <div class="trian"></div>
   </div>
 
-  
+  <!-- Mision Vision -->
+  <div class="container">
+    <div>
+      <div>
+        <h1>Nuestra Misión y Visión</h1>
+      </div>
+      <h2>Misión</h2>
+      <p>Deltha Car's se caracteriza por brindar un buen servicio y atención al cliente, buscando las mejores soluciones
+        y
+        asesorías, ofreciendo los mejores repuestos para su vehículo de óptima calidad y excelente respaldo.</p>
+
+      <h2>Visión</h2>
+      <p>Identificarnos por el excelente servicio al consumidor y convirtiéndonos en líderes del Valle de Tenza y
+        alrededores en comercialización de partes y accesorios automotrices brindando cómodos precios sin bajar la
+        calidad
+        de los repuestos y el servicio; y estar a la vanguardia en cada asesoría suministrada.</p>
+    </div>
+
+    <div>
+
+    </div>
+
+  </div>
+
+
 
   <!-- Footer -->
   <footer id="main-footer">
