diseño pagina web

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <h1 class="title text-white">Encuentra tu coche</h1>
         <div class="services-section">
           <div class="services container">
-            <h4 class="service-description"><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA
+            <h4 class="service-description fs-5"><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA
                   QUE LIMPIAMOS TODOS NUESTROS COCHES, PARA LA SEGURIDAD E HIGIENE DE NUESTROS CLIENTES.</span></strong>
             </h4>
           </div>
         </div>
         <div class=" container-fluid descripcion-div">
-          <h3 class="text-gray fs-5 mt-5  descripcion-delta">Deltacars somos una empresa dedicada a la compra-venta de
+          <h3 class="text-white fs-4 mt-5  descripcion-delta">Deltha Car's somos una empresa dedicada a la compra-venta de
             vehículos
             de ocasión con 15 años de experiencia en el sector.</h3>
           <h3 class="title-box_secondary"></h3>
@@ -417,18 +417,17 @@
             <div class="textwidget custom-html-widget">
               <div class="pie">
                 <h5 style="color:#d51a27;">Teléfono</h5>
-                <p>943 27 20 27 </p>
+                <p>313 244 5615</p>
 
                 <h5 style="color:#d51a27;">Localización</h5>
-                <p> Portuetxe Kalea, 13
-                  20018 Donostia</p>
+                <p> Cra. 8 #9-25,Guateque Boyacá</p>
                 <h5 style="color:#d51a27;">Email</h5>
-                <p>comercial@deltacars.es</p>
+                <p>autopartesdelthacars@gmail.com</p>
 
                 <h5 style="color:#d51a27;">Horarios</h5>
                 <p>
-                  Lunes a viernes: 11am - 19pm <br>
-                  Sábado: 10am - 13pm
+                  Lunes a viernes: 08:00 am - 06:00 pm <br>
+                  Sábado: 09.00 am - 02:00 pm
                 </p>
               </div>
             </div>
