arreglar redireccionamiendo de la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="navbar-nav ml-auto">
               <a class="link-pages nav-link" href="#">Inicio</a>
               <a class="link-pages nav-link" href="views/stock.html">Stock DELTHA CAR´S</a>
-              <a class="link-pages nav-link" href="views/services.html">Financiación</a>
+              <a class="link-pages nav-link" href="views/financiacion.html">Financiación</a>
               <a class="link-pages nav-link" href="views/about.html">Contacto</a>
             </div>
           </div>
