--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       <div class="et_pb_column et_pb_column_4_4 et_pb_column_19 et_pb_css_mix_blend_mode_passthrough et-last-child">
 
         <div class="et_pb_button_module_wrapper et_pb_button_5_wrapper et_pb_button_alignment_center et_pb_module">
-          <a class="et_pb_button et_pb_button_5 et_pb_bg_layout_dark" href="https://deltacars.es/financiacion/"
+          <a class="et_pb_button et_pb_button_5 et_pb_bg_layout_dark" href="views/financiacion.html"
             data-icon="$">Ver financiación</a>
         </div>
       </div>
